--- a/src/createproject/templates/setup.py.tmpl
+++ b/src/createproject/templates/setup.py.tmpl
@@ -18,9 +18,11 @@ setuptools.setup(
     ],
     package_dir={"": 'src'},
     packages=setuptools.find_packages('src'),
-    python_requires='>=3.6',
-    install_requires=['Jinja2>=3.1.2'],
+    python_requires='>=3.9',
+    {% if include_templates %}
+    install_requires=['Jinja2'],
     package_data={'': ['templates/*.txt']},
+    {% endif %}
     entry_points={
         'console_scripts': [
             # useful for running cli scripts (db migrations, shell, ... etc)
